// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapDetailVestiging should not render \`bijzondere rechtstoestand\` 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      hasMultiline={false}
      label="KvK-nummer"
      link={false}
      value="123456"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Vestigingsnummer"
      link={false}
      value=""
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Type vestiging"
      link={false}
      value="Nevenvestiging"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailVestiging should render \`bijzondere rechtstoestand\` when \`surseance van betaling\` 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Surseance van betaling
      </Notification>
    </li>
    <MapDetailResultItem
      hasMultiline={false}
      label="KvK-nummer"
      link={false}
      value="123456"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Vestigingsnummer"
      link={false}
      value=""
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Type vestiging"
      link={false}
      value="Nevenvestiging"
    />
    <MapDetailResultStatusItem
      label="Soort bijzondere rechtstoestand"
      status="alert"
      value="Surseance van betaling"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailVestiging should render everything 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <li
      className="map-detail-result__notification"
    >
      <Notification
        canClose={false}
        className=""
        level="alert"
      >
        Faillissement
      </Notification>
    </li>
    <MapDetailResultItem
      hasMultiline={false}
      label="KvK-nummer"
      link={false}
      value="123456"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Vestigingsnummer"
      link={false}
      value=""
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Type vestiging"
      link={false}
      value="Nevenvestiging"
    />
    <MapDetailResultStatusItem
      label="Soort bijzondere rechtstoestand"
      status="alert"
      value="Faillissement"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailVestiging should render everything with hoofdvestiging = false 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  subTitle="Vestiging label"
  title="Vestiging"
>
  <ul
    className="map-detail-result__list"
  >
    <MapDetailResultItem
      hasMultiline={false}
      label="KvK-nummer"
      link={false}
      value="123456"
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Vestigingsnummer"
      link={false}
      value="0001234"
    />
    <MapDetailAddressItem
      label="Bezoekadres"
      values={
        Object {
          "plaats": "Amsterdam",
        }
      }
    />
    <MapDetailVestigingActiviteitenItem
      activities={
        Array [
          Object {
            "sbiCode": "01",
            "sbiDescription": "SBI Description 1",
          },
          Object {
            "sbiCode": "02",
            "sbiDescription": "SBI Description 2",
          },
        ]
      }
    />
    <MapDetailResultItem
      hasMultiline={false}
      label="Type vestiging"
      link={false}
      value="Nevenvestiging"
    />
  </ul>
</Connect(MapDetailResultWrapper)>
`;

exports[`MapDetailVestiging should render without label 1`] = `
<Connect(MapDetailResultWrapper)
  onMaximize={[MockFunction]}
  onPanoPreviewClick={[MockFunction]}
  panoUrl="panoUrl"
  title="Vestiging"
>
  <Notification
    canClose={true}
    className=""
    level="info"
  >
    Medewerkers/ketenpartners van Gemeente Amsterdam kunnen inloggen om maatschappelijke activiteiten en vestigingen te bekijken.
  </Notification>
</Connect(MapDetailResultWrapper)>
`;
